<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    tools:context="com.iaware.cge.view.CriarConta">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.facebook.drawee.view.SimpleDraweeView
                    android:id="@+id/imagemUser"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:scaleType="centerCrop"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    fresco:roundAsCircle="true"
                    fresco:placeholderImage="@drawable/imagem_user"/>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">


                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:hint="@string/nome"
                            android:id="@+id/nomeUser"
                            android:layout_gravity="center_horizontal" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">


                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:inputType="phone"
                        android:hint="@string/telefone"
                        android:ems="10"
                        android:id="@+id/telefoneUser"
                        android:layout_gravity="center_horizontal"/>

                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:inputType="textEmailAddress"
                    android:hint="@string/email"
                    android:ems="10"
                    android:id="@+id/emailUser"
                    android:layout_gravity="center_horizontal" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:inputType="textPassword"
                    android:hint="@string/senha"
                    android:ems="10"
                    android:id="@+id/senhaUser"
                    android:layout_gravity="center_horizontal"
                    android:imeOptions="actionDone"/>

            </android.support.design.widget.TextInputLayout>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#fff"
                    android:text="@string/criar"
                    android:background="@color/colorButton"
                    android:textSize="20sp"
                    android:layout_marginTop="10dp"
                    android:id="@+id/cadastrarUser"
                    android:layout_gravity="center_horizontal" />
        </LinearLayout>

    </ScrollView>

</RelativeLayout>
