<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="10dp">

            <com.facebook.drawee.view.SimpleDraweeView
                android:layout_gravity="top"
                android:id="@+id/fotoFace"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:scaleType="centerCrop"
                fresco:roundAsCircle="true"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                fresco:placeholderImage="@drawable/imagem_user"/>
        </LinearLayout>



        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/edt_nome"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:ems="10"
                android:drawablePadding="10dp"
                android:hint="@string/nome"
                android:imeOptions="actionNext"
                android:inputType="textCapWords"
                android:textColor="#000"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/edt_telefone"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:ems="10"
                android:drawablePadding="10dp"
                android:hint="@string/telefone"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:textColor="#000"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:ems="10"
                android:drawablePadding="10dp"
                android:hint="@string/email"
                android:imeOptions="actionNext"
                android:inputType="textCapWords"
                android:textColor="#000"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonAtualizar"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginTop="20dp"
                android:text="@string/atualizar"
                android:textColor="@color/black"
                android:textSize="15sp"/>
        </LinearLayout>

    </TableLayout>
</ScrollView>