<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.iaware.cabuu.views.LoginActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:id="@+id/imageView2"
                android:src="@drawable/cabuu_icone"
                android:layout_gravity="center_horizontal|top"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:inputType="textEmailAddress"
                    android:id="@+id/emailUser"
                    android:hint="@string/email"
                    android:layout_gravity="center_horizontal"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/password"
                    android:hint="@string/senha"
                    android:layout_gravity="center_horizontal"/>

            </android.support.design.widget.TextInputLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/entrar"
                android:textSize="20sp"
                android:textColor="#fff"
                android:background="@color/gray"
                android:id="@+id/entrarUser"
                android:layout_gravity="center_horizontal" />



            <com.facebook.login.widget.LoginButton
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginTop="20dp"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:textSize="20sp"
                android:text="Entrar com o Facebook"
                android:layout_centerInParent="true"
                android:layout_gravity="center_horizontal"
                android:drawableLeft="@drawable/facebook_42"/>

            <TextView
                android:id="@+id/tv_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="20dp"
                android:text="@string/criar_conta"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/gray"
                android:layout_gravity="center_horizontal" />


        </LinearLayout>

    </ScrollView>

</RelativeLayout>
