<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#fff">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:id="@+id/imageView3"
            android:src="@drawable/img_icone_dengue"
            android:layout_gravity="center_horizontal|top"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:id="@+id/imageView2"
            android:layout_marginTop="10dp"
            android:src="@drawable/img_nome_dengue"
            android:layout_gravity="center_horizontal|top"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:id="@+id/emailUser"
            android:hint="@string/email"
            android:layout_gravity="center_horizontal" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/senhaUser"
            android:hint="@string/senha"
            android:layout_gravity="center_horizontal" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/entrar"
            android:textSize="20sp"
            android:textColor="#fff"
            android:background="@color/colorButton"
            android:id="@+id/entrarUser"
            android:layout_gravity="center_horizontal" />

        <com.facebook.login.widget.LoginButton
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:textSize="20sp"
            android:text="Entrar com o Facebook"
            android:layout_centerInParent="true"
            android:layout_gravity="center_horizontal"
            android:drawableLeft="@drawable/facebook_42"/>


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ou"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:text="@string/criar_conta"
            android:textStyle="bold"
            android:textSize="20sp"
            android:id="@+id/criarConta"
            android:textColor="@color/colorButton"
            android:layout_gravity="center_horizontal" />


    </LinearLayout>

</ScrollView>

</FrameLayout>